--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beyond-the-board-d546",
+  "name": "dices-and-dragons-vt-d546",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -31,6 +31,7 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
     "isbot": "^3.6.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
